Added ability to change visualization with a button click

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,7 +4,8 @@
 </head>
 <body>
 <p>
-    Loading data from the web!
+    This simple application requests data from an endpoint and plots it when the data is sent!
+    The endpoint is run using a Clojure package - compojure, and the front end is D3.
 </p>
 
 <label for="input_day"
